[project]
name = "tv-cast"
version = "0.1.0"
description = "Samsung TV Video Caster - Cast videos to your Samsung TV via DLNA"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "async-upnp-client>=0.38.0",
    "aiohttp>=3.8.0",
    "yt-dlp>=2024.1.0",
    "pyatv>=0.14.0",
    "zeroconf>=0.80.0",
    "pillow>=10.0.0",
]

[project.scripts]
tv-cast = "tv_cast.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tv_cast"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
